Relating Users in Parse.com complete

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -8,6 +8,9 @@
         android:orderInCategory="100"
         app:showAsAction="never" />
 
+    <item android:id="@+id/action_edit_friends"
+        android:title="@string/menu_edit_friends_label" />
+
     <item android:id="@+id/action_logout"
         android:title="@string/menu_logout_label" />
 
