--- a/app/src/main/res/layout-large/activity_sign_up.xml
+++ b/app/src/main/res/layout-large/activity_sign_up.xml
@@ -13,7 +13,8 @@
     <TextView
         android:id="@+id/title"
         android:text="@string/app_name"
-        style="@style/AuthTitle" />
+        style="@style/AuthTitle"
+        android:layout_marginTop="180dp"/>
 
     <TextView
         android:text="@string/subtitle"
@@ -23,7 +24,9 @@
 
     <LinearLayout
         android:id="@+id/edit_text_layout"
-        style="@style/AuthFieldContainer">
+        style="@style/AuthFieldContainer"
+        android:layout_width="400dp"
+        android:layout_centerHorizontal="true">
 
     <EditText
         android:layout_width="match_parent"
@@ -67,17 +70,19 @@
         android:id="@+id/sign_up_button"
         style="@style/AuthButton"
         android:layout_below="@+id/edit_text_layout"
-        android:layout_alignParentLeft="@+id/backgroundImage"
+        android:layout_alignLeft="@+id/edit_text_layout"
         android:layout_toLeftOf="@id/buttonDivider"
-        android:layout_marginRight="0dp"/>
+        android:layout_marginRight="0dp"
+        android:layout_marginLeft="0dp"/>
 
     <Button
         android:text="@string/cancel_button_label"
         android:id="@+id/cancel_button"
         style="@style/AuthButton"
         android:layout_below="@+id/edit_text_layout"
-        android:layout_alignParentLeft="@+id/backgroundImage"
+        android:layout_alignRight="@+id/edit_text_layout"
         android:layout_toRightOf="@id/buttonDivider"
-        android:layout_marginLeft="0dp"/>
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"/>
 
 </RelativeLayout>
