Customizing a ListView for the Inbox - complete

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,9 +1,82 @@
 <resources>
 
-    <style name="AppTheme" parent="android:Theme.Holo.Light">
+    <!-- Copied for actionbar styling -->
+    <style name="Theme.Ribbit2" parent="@android:style/Theme.Holo.Light">
+        <item name="android:actionBarItemBackground">@drawable/selectable_background_ribbit2</item>
+        <item name="android:popupMenuStyle">@style/PopupMenu.Ribbit2</item>
+        <item name="android:dropDownListViewStyle">@style/DropDownListView.Ribbit2</item>
+        <item name="android:actionBarTabStyle">@style/ActionBarTabStyle.Ribbit2</item>
+        <item name="android:actionDropDownStyle">@style/DropDownNav.Ribbit2</item>
+        <item name="android:actionBarStyle">@style/ActionBar.Solid.Ribbit2</item>
+        <item name="android:actionModeBackground">@drawable/cab_background_top_ribbit2</item>
+        <item name="android:actionModeSplitBackground">@drawable/cab_background_bottom_ribbit2</item>
+        <item name="android:actionModeCloseButtonStyle">@style/ActionButton.CloseMode.Ribbit2</item>
         <item name="android:editTextBackground">@drawable/apptheme_edit_text_holo_light</item>
+        <item name="android:actionOverflowButtonStyle">@style/Theme.Ribbit2.Overflow</item>
+        <item name="android:listViewStyle">@style/Theme.Ribbit2.LightPurpleBackground</item>
+        <item name="android:gridViewStyle">@style/Theme.Ribbit2.LightPurpleBackground</item>
     </style>
     
+    <style name="Theme.Ribbit2.LightPurpleBackground">
+        <item name="android:colorBackground">@color/light_purple_background</item>
+        <item name="android:divider">@null</item>
+    </style>
+
+    <style name="Theme.Ribbit2.Overflow" parent="@android:style/Widget.ActionButton.Overflow">
+        <item name="android:src">@drawable/ic_menu_overflow</item>
+    </style>
+
+    <style name="ActionBar.Solid.Ribbit2" parent="@android:style/Widget.Holo.Light.ActionBar.Solid">
+        <item name="android:titleTextStyle">@style/ActionBar.Solid.Ribbit2.TitleTextStyle</item>
+        <item name="android:background">@drawable/ab_solid_ribbit2</item>
+        <item name="android:backgroundStacked">@drawable/ab_stacked_solid_ribbit2</item>
+        <item name="android:backgroundSplit">@drawable/ab_bottom_solid_ribbit2</item>
+        <item name="android:progressBarStyle">@style/ProgressBar.Ribbit2</item>
+    </style>
+    
+    <style name="ActionBar.Solid.Ribbit2.TitleTextStyle"
+        parent="@android:style/TextAppearance.Holo.Widget.ActionBar.Title">
+        <item name="android:textColor">@color/text_color</item>
+    </style>
+
+    <style name="ActionBar.Transparent.Ribbit2" parent="@android:style/Widget.Holo.Light.ActionBar">
+        <item name="android:background">@drawable/ab_transparent_ribbit2</item>
+        <item name="android:progressBarStyle">@style/ProgressBar.Ribbit2</item>
+    </style>
+
+    <style name="PopupMenu.Ribbit2" parent="@android:style/Widget.Holo.Light.ListPopupWindow">
+        <item name="android:popupBackground">@drawable/menu_dropdown_panel_ribbit2</item>
+    </style>
+
+    <style name="DropDownListView.Ribbit2" parent="@android:style/Widget.Holo.Light.ListView.DropDown">
+        <item name="android:listSelector">@drawable/selectable_background_ribbit2</item>
+    </style>
+
+    <style name="ActionBarTabStyle.Ribbit2" parent="@android:style/Widget.Holo.Light.ActionBar.TabView">
+        <item name="android:background">@drawable/tab_indicator_ab_ribbit2</item>
+    </style>
+
+    <style name="DropDownNav.Ribbit2" parent="@android:style/Widget.Holo.Light.Spinner">
+        <item name="android:background">@drawable/spinner_background_ab_ribbit2</item>
+        <item name="android:popupBackground">@drawable/menu_dropdown_panel_ribbit2</item>
+        <item name="android:dropDownSelector">@drawable/selectable_background_ribbit2</item>
+    </style>
+
+    <style name="ProgressBar.Ribbit2" parent="@android:style/Widget.Holo.Light.ProgressBar.Horizontal">
+        <item name="android:progressDrawable">@drawable/progress_horizontal_ribbit2</item>
+    </style>
+
+    <style name="ActionButton.CloseMode.Ribbit2" parent="@android:style/Widget.Holo.Light.ActionButton.CloseMode">
+        <item name="android:background">@drawable/btn_cab_done_ribbit2</item>
+    </style>
+
+    <!-- this style is only referenced in a Light.DarkActionBar based theme -->
+    <style name="Theme.Ribbit2.Widget" parent="@android:style/Theme.Holo">
+        <item name="android:popupMenuStyle">@style/PopupMenu.Ribbit2</item>
+        <item name="android:dropDownListViewStyle">@style/DropDownListView.Ribbit2</item>
+    </style>
+
+    <!-- Authentication Styles -->
     <style name="AuthBackground">
         <item name="android:background">@drawable/background_fill</item>
     </style>
