--- a/app/src/main/res/layout/message_item.xml
+++ b/app/src/main/res/layout/message_item.xml
@@ -1,26 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="wrap_content">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@android:color/transparent">
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent" android:layout_height="wrap_content"
+    android:layout_marginLeft="@dimen/inbox_horizontal_margin"
+    android:layout_marginRight="@dimen/inbox_horizontal_margin"
+    android:layout_marginTop="@dimen/inbox_vertical_margin"
+    android:background="@android:color/white">
 
     <ImageView
+        android:contentDescription="@string/content_desc_message_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/messageIcon"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:src="@drawable/ic_action_picture"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:src="@drawable/ic_picture"
         android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/message_list_item_vertical_margin"
-        android:paddingBottom="@dimen/message_list_item_vertical_margin"/>
+        android:paddingRight="@dimen/activity_horizontal_margin"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:id="@+id/senderLabel"
-        android:layout_centerVertical="true"
-        android:layout_toRightOf="@+id/messageIcon"
-        android:layout_toEndOf="@+id/messageIcon"
-        android:paddingLeft="@dimen/activity_horizontal_margin"/>
-</RelativeLayout>
+        android:layout_toLeftOf="@+id/messageIcon"
+        android:layout_alignParentLeft="true"
+        android:text="Test Name"
+        android:paddingTop="@dimen/message_vertical_padding"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:textSize="16sp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Text"
+            android:id="@+id/timeLabel"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:layout_below="@id/senderLabel"
+            android:layout_toLeftOf="@+id/messageIcon"
+            android:textSize="12sp"
+            android:textColor="@color/light_gray"
+            android:paddingBottom="@dimen/message_vertical_padding"/>
+    </RelativeLayout>
+</LinearLayout>
