--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -11,7 +11,7 @@
 
     <item android:id="@+id/action_camera"
         android:title="@string/menu_camera_label"
-        android:icon="@drawable/ic_action_camera"
+        android:icon="@drawable/ic_menu_camera"
         app:showAsAction="always"/>
 
 </menu>
