--- a/app/src/main/res/menu/menu_recipients.xml
+++ b/app/src/main/res/menu/menu_recipients.xml
@@ -1,10 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.steve.ribbit2.RecipientsActivity">
+    tools:context="com.example.steve.ribbit2.ui.RecipientsActivity">
     <item android:id="@+id/action_send"
         android:title="@string/action_send_label"
         android:orderInCategory="100" app:showAsAction="always"
         android:visible="false"
-        android:icon="@drawable/ic_action_send_now"/>
+        android:icon="@drawable/ic_menu_send"/>
 </menu>
