--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -4,13 +4,21 @@
     tools:context=".MainActivity$PlaceholderFragment">
 
 
-    <ListView
+    <GridView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@android:id/list"
+        android:id="@+id/friendsGrid"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:numColumns="auto_fit"
+        android:horizontalSpacing="@dimen/user_grid_spacing"
+        android:verticalSpacing="@dimen/user_grid_spacing"
+        android:clipToPadding="false"
+        android:gravity="center"
+        android:layout_centerHorizontal="true"
+        android:columnWidth="90dp"
+        android:stretchMode="columnWidth"/>
     
     <TextView
         android:id="@android:id/empty"
