--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,12 +14,16 @@
         <item name="android:editTextBackground">@drawable/apptheme_edit_text_holo_light</item>
         <item name="android:actionOverflowButtonStyle">@style/Theme.Ribbit2.Overflow</item>
         <item name="android:listViewStyle">@style/Theme.Ribbit2.LightPurpleBackground</item>
-        <item name="android:gridViewStyle">@style/Theme.Ribbit2.LightPurpleBackground</item>
+        <item name="android:gridViewStyle">@style/Theme.Ribbit2.LightPurpleBackground.GridView</item>
     </style>
-    
+
     <style name="Theme.Ribbit2.LightPurpleBackground">
-        <item name="android:colorBackground">@color/light_purple_background</item>
+        <item name="android:background">@color/light_purple_background</item>
         <item name="android:divider">@null</item>
+    </style>
+
+    <style name="Theme.Ribbit2.LightPurpleBackground.GridView">
+        <item name="android:padding">@dimen/user_grid_spacing</item>
     </style>
 
     <style name="Theme.Ribbit2.Overflow" parent="@android:style/Widget.ActionButton.Overflow">
