--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -4,16 +4,17 @@
     android:background="@android:color/white">
 
     <ImageView
+        android:src="@drawable/avatar_empty"
         android:contentDescription="@string/content_desc_user_avatar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/userImageView"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:scaleType="fitXY"
-        android:adjustViewBounds="true"
-        android:src="@drawable/avatar_empty" />
+        style="@style/GridImage" />
+
+    <ImageView
+        android:src="@drawable/avatar_selected"
+        android:contentDescription="@string/content_desc_user_checkmark"
+        android:id="@+id/checkImageView"
+        style="@style/GridImage"
+        android:visibility="invisible"/>
 
     <TextView
         android:layout_width="wrap_content"
